convert all svg exports to pdf

--- a/data/analysis/agreement.ipynb
+++ b/data/analysis/agreement.ipynb
@@ -231,8 +231,8 @@
     "\n",
     "fig.tight_layout()\n",
     "\n",
-    "out_filename = \"img/agreement-heatmap.svg\"\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = \"img/agreement-heatmap.pdf\"\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "\n",
     "plt.show()"
    ]
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
