--- a/data/analysis/analysis.ipynb
+++ b/data/analysis/analysis.ipynb
@@ -1694,8 +1694,8 @@
     "fig.suptitle('Avg. Error Sent Scores')\n",
     "ax[0].set_ylabel('Our Score')\n",
     "# plt.legend([p[0].value for p in pts], loc='center left', bbox_to_anchor=(1.5, 0.5), ncol=3)\n",
-    "out_filename = f'img/error-scores.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/error-scores.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
@@ -1869,8 +1869,8 @@
     "    tick.set_rotation(45)\n",
     "    tick.set_horizontalalignment('right')\n",
     "\n",
-    "out_filename = f'img/edit-sizes.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/edit-sizes.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
@@ -1930,8 +1930,8 @@
     "plt.xlabel('Number of Edits')\n",
     "plt.ylabel('Edit Distance')\n",
     "plt.legend()\n",
-    "out_filename = f'img/edit-distance-num-edits.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/edit-distance-num-edits.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
@@ -2029,8 +2029,8 @@
     "ax[0, 0].set_ylabel('SimpEval')\n",
     "ax[1, 0].set_ylabel('ASSET')\n",
     "\n",
-    "out_filename = f'img/split-edit-sizes.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/split-edit-sizes.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
@@ -2104,8 +2104,8 @@
     "\n",
     "axs[1].legend()\n",
     "\n",
-    "out_filename = f'img/score-distributions.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/score-distributions.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()\n"
    ]
   },
@@ -2739,8 +2739,8 @@
     "axs[1].legend(subtypes, loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "plt.suptitle(\"Manual Breakdown of Structure Changes\")\n",
     "\n",
-    "out_filename = \"img/structure-breakdown.svg\"\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = \"img/structure-breakdown.pdf\"\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show() "
    ]
   },
@@ -2773,8 +2773,8 @@
     "axs[1].set_xlabel('Split Edits')\n",
     "plt.suptitle(\"Child Edits of Composite Edits\")\n",
     "\n",
-    "out_filename = \"img/composite-breakdown.svg\"\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = \"img/composite-breakdown.pdf\"\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show() "
    ]
   }
@@ -2795,7 +2795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
