--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -744,8 +744,8 @@
     "plt.xlabel('Our score (Only Quality)')\n",
     "plt.ylabel('Our score (Only Error, negated)')\n",
     "plt.title(f'Error vs. Quality for Error Sentences ({len(pts)} sentences)')\n",
-    "out_filename = f'img/error-vs-quality.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/error-vs-quality.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
