--- a/data/analysis/scoring.ipynb
+++ b/data/analysis/scoring.ipynb
@@ -164,8 +164,8 @@
     "\n",
     "axs[1].legend()\n",
     "\n",
-    "out_filename = f'img/score-distributions.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/score-distributions.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()\n"
    ]
   },
@@ -220,8 +220,8 @@
     "\n",
     "    axs[j, 0].set_ylabel(\"Density\")\n",
     "axs[1, 2].legend(frameon=False)\n",
-    "out_filename = f'img/performance-distribution.svg'\n",
-    "plt.savefig(out_filename, format=\"svg\", bbox_inches='tight', pad_inches=0.0)\n",
+    "out_filename = f'img/performance-distribution.pdf'\n",
+    "plt.savefig(out_filename, format=\"pdf\", bbox_inches='tight', pad_inches=0.0)\n",
     "plt.show()"
    ]
   },
@@ -373,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
