update table export

--- a/data/analysis/tutorial.ipynb
+++ b/data/analysis/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "Loading files: ['../annotated/batch_5_anton.json', '../annotated/batch_5_ayush.json', '../annotated/batch_5_kelly.json', '../annotated/batch_5_rachel.json', '../annotated/batch_5_vinayak.json', '../annotated/batch_5_vishnesh.json', '../annotated/batch_6_anton.json', '../annotated/batch_6_ayush.json', '../annotated/batch_6_kelly.json', '../annotated/batch_6_rachel.json', '../annotated/batch_6_vinayak.json', '../annotated/batch_6_vishnesh.json']\n",
       "\n",
-      "Found users: {'rachel', 'vinayak', 'ayush', 'anton', 'kelly', 'vishnesh'}\n",
+      "Found users: {'rachel', 'anton', 'ayush', 'kelly', 'vishnesh', 'vinayak'}\n",
       "\n",
       "anton - Batch 5, HIT 38 (ID 37) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "vinayak - Batch 6, HIT 16 (ID 45) has 1 insertion edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "'anton - Batch 5, HIT 1 (ID 0)'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['id', 'original', 'original_spans', 'simplified', 'simplified_spans', 'system', 'annotations', 'user', 'batch', 'hit_id', 'edits', 'processed_annotations', 'simpeval_scores', 'da_scores', 'likert_scores', 'score'])"
+       "dict_keys(['id', 'original', 'original_spans', 'simplified', 'simplified_spans', 'system', 'annotations', 'user', 'batch', 'hit_id', 'edits', 'processed_annotations', 'simpeval_scores', 'da_scores', 'likert_scores', 'score', 'subscores'])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,27 +156,27 @@
        "  'id': 0,\n",
        "  'information_impact': <Information.LESS: 'Generalization'>,\n",
        "  'type': <Quality.QUALITY: 'No Error'>,\n",
-       "  'family': <Family.CONTENT: 'Content'>,\n",
+       "  'family': <Family.CONTENT: 'Conceptual'>,\n",
        "  'grammar_error': False,\n",
        "  'error_type': None,\n",
        "  'rating': 3,\n",
        "  'size': 0.008310249307479225,\n",
        "  'reorder_level': None,\n",
-       "  'score': 0.970747553725849},\n",
+       "  'score': 0.0},\n",
        " {'edit_type': 'deletion',\n",
        "  'id': 1,\n",
        "  'information_impact': <Information.LESS: 'Generalization'>,\n",
        "  'type': <Quality.QUALITY: 'No Error'>,\n",
-       "  'family': <Family.CONTENT: 'Content'>,\n",
+       "  'family': <Family.CONTENT: 'Conceptual'>,\n",
        "  'grammar_error': False,\n",
        "  'error_type': None,\n",
        "  'rating': 2,\n",
        "  'size': 0.030470914127423823,\n",
        "  'reorder_level': None,\n",
-       "  'score': 0.8085959365626684}]"
+       "  'score': 0.0}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "  'annotation': ['good', 'no', 'no']}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        " (352, 361): {}}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        " (318, 322): {'substitution': 1}}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        " (318, 322): {'substitution': 1}}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        " (352, 361): {'structure': 1, 'deletion': 1}}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
