--- a/data/analysis/sensitivity.ipynb
+++ b/data/analysis/sensitivity.ipynb
@@ -1,6 +1,64 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export T5-11B Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to paste original simpeval id from simp_eval/simpeval_2022.csv\n",
+    "path = '../simp_eval/simpeval_2022.csv'\n",
+    "with open(path, encoding='utf-8') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    keys = next(reader)\n",
+    "    contents = [row for row in reader]\n",
+    "    simp_eval = []\n",
+    "    for sent in contents:\n",
+    "        simp_eval += [{k: v for k, v in zip(keys, sent)}]\n",
+    "\n",
+    "# Extract T5 sents\n",
+    "out = []\n",
+    "for sent in data:\n",
+    "    if '11B' in sent['system']:\n",
+    "        out += [sent['original']]\n",
+    "final = []\n",
+    "for sent_orig in set(out):\n",
+    "    next_out = []\n",
+    "    ref = []\n",
+    "    for sent in data:\n",
+    "        if '11B' in sent['system'] and sent['original'] == sent_orig:\n",
+    "            next_out += [sent['simplified']]\n",
+    "        if 'Human' in sent['system'] and sent['original'] == sent_orig:\n",
+    "            ref += [sent['simplified']]\n",
+    "    next_out = list(set(next_out))\n",
+    "    ref = list(set(ref))\n",
+    "    assert len(next_out) == 1\n",
+    "    next_out = next_out[0]\n",
+    "    final += [{\n",
+    "        'original_id': int([x['original_id'] for x in simp_eval if x['original'] == sent_orig][0]),\n",
+    "        'original': sent_orig, \n",
+    "        'generation': next_out, \n",
+    "        'system': 'T5-11B'\n",
+    "        # 'references': ref\n",
+    "    }]\n",
+    "print(len(final))\n",
+    "\n",
+    "# Write to CSV\n",
+    "f = csv.writer(open(\"comet/t5_outputs.csv\", \"w\", newline='', encoding='utf-8'))\n",
+    "f.writerow(list(final[0].keys()))\n",
+    "for row in final:\n",
+    "    f.writerow([v for k, v in row.items()])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1311,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
