--- a/data/analysis/structure-inspection.ipynb
+++ b/data/analysis/structure-inspection.ipynb
@@ -11,7 +11,7 @@
      "text": [
       "Loading files: ['../annotated/batch_5_anton.json', '../annotated/batch_5_ayush.json', '../annotated/batch_5_kelly.json', '../annotated/batch_5_rachel.json', '../annotated/batch_5_vinayak.json', '../annotated/batch_5_vishnesh.json', '../annotated/batch_6_anton.json', '../annotated/batch_6_ayush.json', '../annotated/batch_6_kelly.json', '../annotated/batch_6_rachel.json', '../annotated/batch_6_vinayak.json', '../annotated/batch_6_vishnesh.json', '../annotated/batch_7_anton.json', '../annotated/batch_7_ayush.json', '../annotated/batch_7_kelly.json', '../annotated/batch_7_rachel.json', '../annotated/batch_7_vinayak.json', '../annotated/batch_7_vishnesh.json', '../annotated/batch_8_anton.json', '../annotated/batch_8_ayush.json', '../annotated/batch_8_kelly.json', '../annotated/batch_8_rachel.json', '../annotated/batch_8_vinayak.json', '../annotated/batch_8_vishnesh.json', '../annotated/batch_9_ayush.json', '../annotated/batch_9_kelly.json', '../annotated/batch_9_rachel.json', '../annotated/batch_9_vinayak.json', '../annotated/batch_9_vishnesh.json']\n",
       "\n",
-      "Found users: {'vishnesh', 'kelly', 'rachel', 'ayush', 'anton', 'vinayak'}\n",
+      "Found users: {'kelly', 'rachel', 'ayush', 'vinayak', 'vishnesh', 'anton'}\n",
       "\n",
       "anton - Batch 5, HIT 38 (ID 23) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "vinayak - Batch 6, HIT 16 (ID 27) has 1 insertion edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -98,10 +98,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "blank = {\n",
+    "    'id': 0,\n",
+    "    'original': '',\n",
+    "    'original_spans': [],\n",
+    "    'simplified': '',\n",
+    "    'simplified_spans': [],\n",
+    "    'annotations': [],\n",
+    "    'system': 'blank',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 sentences are not fully annotated\n"
+     ]
+    }
+   ],
+   "source": [
+    "ids = set([sent['id'] for sent in data])\n",
+    "\n",
+    "# Limit to first 20 unique sentences\n",
+    "ids = list(ids)[:20*7]\n",
+    "\n",
+    "not_full = 0\n",
+    "set1, set2, set3 = [], [], []\n",
+    "for id in ids:\n",
+    "    sents = [sent for sent in data if sent['id'] == id]\n",
+    "    \n",
+    "    if len(sents) != 3:\n",
+    "        not_full += 1\n",
+    "\n",
+    "    for i in range(3):\n",
+    "        if len(sents) <= i:\n",
+    "            # Add blank sentence\n",
+    "            sents += [blank]\n",
+    "\n",
+    "    set1 += [sents[0]]\n",
+    "    set2 += [sents[1]]\n",
+    "    set3 += [sents[2]]\n",
+    "\n",
+    "print(f'{not_full} sentences are not fully annotated')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, set_ in enumerate([set1, set2, set3]):\n",
+    "    dmp = []\n",
+    "    for i, sent in enumerate(set_):\n",
+    "        dmp += [{\n",
+    "            'id': i,\n",
+    "            'original': sent['original'],\n",
+    "            'original_spans': sent['original_spans'],\n",
+    "            'simplified': sent['simplified'],\n",
+    "            'simplified_spans': sent['simplified_spans'],\n",
+    "            'system': sent['system'],\n",
+    "            'annotations': sent['annotations'],\n",
+    "        }]\n",
+    "    with open(f'st-inspect/set_{idx}.json', 'w') as f:\n",
+    "        json.dump(dmp, f, indent=4)"
+   ]
   }
  ],
  "metadata": {
