add new-wiki-3 and human

--- a/data/edit_classification/prepare_data.ipynb
+++ b/data/edit_classification/prepare_data.ipynb
@@ -12,7 +12,8 @@
     "path.append(\"/Users/yaod_1/Desktop/webpage/text-simplification/ts-annoation-tool/data/analysis\")\n",
     "\n",
     "from utils.all import *\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -33,7 +34,7 @@
      "text": [
       "Loading files: ['../annotated/batch_5_anton.json', '../annotated/batch_5_ayush.json', '../annotated/batch_5_kelly.json', '../annotated/batch_5_rachel.json', '../annotated/batch_5_vinayak.json', '../annotated/batch_5_vishnesh.json']\n",
       "\n",
-      "Found users: {'anton', 'ayush', 'vinayak', 'kelly', 'rachel', 'vishnesh'}\n",
+      "Found users: {'vinayak', 'rachel', 'anton', 'vishnesh', 'ayush', 'kelly'}\n",
       "\n",
       "anton - Batch 5, HIT 38 (ID 37) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "rachel - Batch 5, HIT 21 (ID 65) has 4 deletion edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -44,19 +45,9 @@
       "vinayak - Batch 5, HIT 17 (ID 100) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "When processing sentence: vinayak - Batch 5, HIT 10 (ID 98). Caught error on: Could not process edit: {'type': 'deletion', 'id': 1, 'original_span': [(229, 233)], 'simplified_span': None, 'annotation': None}. Skipping...\n",
       "When processing sentence: vinayak - Batch 5, HIT 34 (ID 112). Caught error on: ''. Skipping...\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
       "Loading files: ['../annotated/batch_6_anton.json', '../annotated/batch_6_ayush.json', '../annotated/batch_6_kelly.json', '../annotated/batch_6_rachel.json', '../annotated/batch_6_vinayak.json', '../annotated/batch_6_vishnesh.json']\n",
       "\n",
-      "Found users: {'anton', 'ayush', 'vinayak', 'kelly', 'rachel', 'vishnesh'}\n",
+      "Found users: {'vinayak', 'rachel', 'anton', 'vishnesh', 'ayush', 'kelly'}\n",
       "\n",
       "ayush - Batch 6, HIT 3 (ID 37) has 1 structure edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "vinayak - Batch 6, HIT 16 (ID 85) has 1 insertion edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -68,14 +59,9 @@
       "When processing sentence: vinayak - Batch 6, HIT 27 (ID 96). Caught error on: Could not process edit: {'type': 'insertion', 'id': 1, 'original_span': None, 'simplified_span': [(49, 54)], 'annotation': None}. Skipping...\n",
       "When processing sentence: vinayak - Batch 6, HIT 31 (ID 100). Caught error on: Could not process edit: {'type': 'insertion', 'id': 0, 'original_span': None, 'simplified_span': [(75, 78)], 'annotation': None}. Skipping...\n",
       "When processing sentence: vinayak - Batch 6, HIT 40 (ID 109). Caught error on: Could not process edit: {'type': 'insertion', 'id': 1, 'original_span': None, 'simplified_span': [(109, 112)], 'annotation': None}. Skipping...\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
-      "found\n",
       "Loading files: ['../annotated/batch_7_anton.json', '../annotated/batch_7_ayush.json', '../annotated/batch_7_kelly.json', '../annotated/batch_7_rachel.json', '../annotated/batch_7_vinayak.json', '../annotated/batch_7_vishnesh.json']\n",
       "\n",
-      "Found users: {'anton', 'ayush', 'vinayak', 'kelly', 'rachel', 'vishnesh'}\n",
+      "Found users: {'vinayak', 'rachel', 'anton', 'vishnesh', 'ayush', 'kelly'}\n",
       "\n",
       "kelly - Batch 7, HIT 47 (ID 70) has 1 structure edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "vinayak - Batch 7, HIT 17 (ID 76) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -87,7 +73,7 @@
       "When processing sentence: rachel - Batch 7, HIT 43 (ID 112). Caught error on: ''. Skipping...\n",
       "Loading files: ['../annotated/batch_8_anton.json', '../annotated/batch_8_ayush.json', '../annotated/batch_8_kelly.json', '../annotated/batch_8_rachel.json', '../annotated/batch_8_vinayak.json', '../annotated/batch_8_vishnesh.json']\n",
       "\n",
-      "Found users: {'anton', 'ayush', 'vinayak', 'kelly', 'rachel', 'vishnesh'}\n",
+      "Found users: {'vinayak', 'rachel', 'anton', 'vishnesh', 'ayush', 'kelly'}\n",
       "\n",
       "rachel - Batch 8, HIT 35 (ID 42) has 2 structure edits but -1 annotations. Likely a missing annotation. Skipping edit type...\n",
       "rachel - Batch 8, HIT 37 (ID 44) has 5 structure edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -107,7 +93,7 @@
       "When processing sentence: rachel - Batch 8, HIT 46 (ID 92). Caught error on: Could not process edit: {'type': 'split', 'id': 0, 'original_span': [(143, 148)], 'simplified_span': [(62, 64), (65, 67)], 'annotation': None, 'composite_edits': []}. Skipping...\n",
       "Loading files: ['../annotated/batch_9_ayush.json', '../annotated/batch_9_kelly.json', '../annotated/batch_9_rachel.json', '../annotated/batch_9_vinayak.json', '../annotated/batch_9_vishnesh.json']\n",
       "\n",
-      "Found users: {'ayush', 'vinayak', 'kelly', 'rachel', 'vishnesh'}\n",
+      "Found users: {'vinayak', 'rachel', 'vishnesh', 'ayush', 'kelly'}\n",
       "\n",
       "kelly - Batch 9, HIT 17 (ID 22) has 2 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
       "kelly - Batch 9, HIT 18 (ID 23) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -187,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,12 +181,13 @@
     "                                \"structure\": \"<STR>\", \"split\": \"<SPLIT>\"}\n",
     "edit_2_special_token_end = {\"deletion\": \"</DEL>\", \"insertion\": \"</INS>\", \"substitution\": \"</SUB>\", \"reorder\": \"</REO>\",\n",
     "                                \"structure\": \"</STR>\", \"split\": \"</SPLIT>\"}\n",
-    "                            \n",
+    "\n",
+    "original_list = []                       \n",
     "sentence1_list = []\n",
     "sentence2_list = []\n",
     "label_list = []\n",
     "\n",
-    "for annotation in data[:1]:\n",
+    "for annotation in data:\n",
     "    original = annotation['original']\n",
     "    simplified = annotation['simplified']\n",
     "    for i, edit in enumerate(annotation[\"edits\"]):\n",
@@ -215,9 +202,9 @@
     "            original_spans.sort(key=lambda x: (x[0], x[1]))\n",
     "            new_original = original[:original_spans[0][0]]\n",
     "            for j, span in enumerate(original_spans):\n",
-    "                new_original += edit_2_special_token_start[edit_type] + \" \"\n",
+    "                new_original += edit_2_special_token_start[edit_type]\n",
     "                new_original += original[span[0]:span[1]]\n",
-    "                new_original += \" \" + edit_2_special_token_end[edit_type]\n",
+    "                new_original += edit_2_special_token_end[edit_type]\n",
     "                if j < len(original_spans) - 1:\n",
     "                    new_original += original[original_spans[j][1]:original_spans[j+1][0]]\n",
     "            new_original += original[original_spans[-1][1]:]\n",
@@ -231,13 +218,18 @@
     "                if simplified[span[0]:span[1]] == \"||\":\n",
     "                    new_simplified += \"<SPLIT_SIGN>\"\n",
     "                else:\n",
-    "                    new_simplified += edit_2_special_token_start[edit_type] + \" \"\n",
+    "                    new_simplified += edit_2_special_token_start[edit_type]\n",
     "                    new_simplified += simplified[span[0]:span[1]]\n",
-    "                    new_simplified += \" \" + edit_2_special_token_end[edit_type]\n",
+    "                    new_simplified += edit_2_special_token_end[edit_type]\n",
     "                if j < len(simplified_spans) - 1:\n",
     "                    new_simplified += simplified[simplified_spans[j][1]:simplified_spans[j+1][0]]\n",
     "            new_simplified += simplified[simplified_spans[-1][1]:]\n",
-    "            \n",
+    "        \n",
+    "        # replace \"|| \" in simplified with \"\"\n",
+    "        new_simplified = new_simplified.replace(\"|| \", \"\")\n",
+    "        new_simplified = new_simplified.replace(\"<SPLIT_SIGN> \", \"<SPLIT_SIGN>\")\n",
+    "        \n",
+    "        original_list.append(original)\n",
     "        sentence1_list.append(new_original)\n",
     "        sentence2_list.append(new_simplified)\n",
     "        label_list.append(label)"
@@ -245,123 +237,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, <SPLIT> to a </SPLIT> major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\""
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentence1_list[-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The buildings of Winchester College have diverse architectural styles. || They reflect multiple periods of building from the college’s founding in 1382, through additions in the medieval and early modern periods. <SPLIT_SIGN> <SPLIT> They also show </SPLIT> big expansions to accommodations in the Victorian era and at the beginning of the 20th century and more recently.'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentence2_list[-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'split',\n",
-       " 'id': 0,\n",
-       " 'original_span': [(81, 91)],\n",
-       " 'simplified_span': [(71, 73), (74, 78), (79, 86)],\n",
-       " 'annotation': ['positive', 'a lot', '', 'no'],\n",
-       " 'composite_edits': [{'type': 'substitution',\n",
-       "   'id': 0,\n",
-       "   'original_span': [(81, 91)],\n",
-       "   'simplified_span': [(79, 86)]},\n",
-       "  {'type': 'insertion',\n",
-       "   'id': 0,\n",
-       "   'original_span': None,\n",
-       "   'simplified_span': [(74, 78)]}]}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data[0][\"edits\"][-2]"
+    "# create dataframe\n",
+    "df = pd.DataFrame({\"original\": original_list, \"sentence1\": sentence1_list, \"sentence2\": sentence2_list, \"label\": label_list})\n",
+    "\n",
+    "unique_sentence1 = df[\"original\"].unique().tolist()\n",
+    "# train, val, test split, 80%, 10%, 10%\n",
+    "train, val, test = np.split(unique_sentence1, [int(.8*len(unique_sentence1)), int(.9*len(unique_sentence1))])\n",
+    "\n",
+    "train_df = df[df[\"original\"].isin(train)]\n",
+    "val_df = df[df[\"original\"].isin(val)]\n",
+    "test_df = df[df[\"original\"].isin(test)]\n",
+    "# save to csv\n",
+    "train_df.to_csv(\"roberta_data/train.csv\", index=False)\n",
+    "val_df.to_csv(\"roberta_data/val.csv\", index=False)\n",
+    "test_df.to_csv(\"roberta_data/test.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 'split',\n",
-       " 'id': 1,\n",
-       " 'original_span': [(224, 228)],\n",
-       " 'simplified_span': [(213, 215), (216, 230)],\n",
-       " 'annotation': ['positive', 'a lot', '', 'no'],\n",
-       " 'composite_edits': []}"
+       "(6260, 633, 683)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0][\"edits\"][-2]"
+    "len(train_df), len(val_df), len(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "9\n",
-      "9\n",
-      "9\n",
-      "9\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Counter({'quality': 5842, 'trivial': 667, 'error': 1067})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(5):\n",
-    "    for i in range(6, 10):\n",
-    "        a = 6\n",
-    "    print(i)\n"
+    "# count number of each label in label_list\n",
+    "from collections import Counter\n",
+    "Counter(label_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Prepare GPT-3 data\n",
+    "\n",
+    "The difference is to use understandablt marker, like \"<deletion>\", \"<insertion>\", \"<substitution>\" ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edit_2_special_token_start = {\"deletion\": \"<deletion>\", \"insertion\": \"<insertion>\", \"substitution\": \"<substitution>\", \"reorder\": \"<reorder>\", \n",
+    "                                \"structure\": \"<structure>\", \"split\": \"<split>\"}\n",
+    "edit_2_special_token_end = {\"deletion\": \"</deletion>\", \"insertion\": \"</insertion>\", \"substitution\": \"</substitution>\", \"reorder\": \"</reorder>\",\n",
+    "                                \"structure\": \"</structure>\", \"split\": \"</split>\"}\n",
+    "\n",
+    "original_list = []                       \n",
+    "sentence1_list = []\n",
+    "sentence2_list = []\n",
+    "label_list = []\n",
+    "\n",
+    "for annotation in data:\n",
+    "    original = annotation['original']\n",
+    "    simplified = annotation['simplified']\n",
+    "    for i, edit in enumerate(annotation[\"edits\"]):\n",
+    "        edit_type = edit[\"type\"]\n",
+    "        original_spans = edit[\"original_span\"]\n",
+    "        simplified_spans = edit[\"simplified_span\"]\n",
+    "        label = annotation[\"processed_annotations\"][i][\"type\"].name.lower()\n",
+    "        # each span is a tuple (start, end), sort by start, then end\n",
+    "        if original_spans is None:\n",
+    "            new_original = original\n",
+    "        else:\n",
+    "            original_spans.sort(key=lambda x: (x[0], x[1]))\n",
+    "            new_original = original[:original_spans[0][0]]\n",
+    "            for j, span in enumerate(original_spans):\n",
+    "                new_original += edit_2_special_token_start[edit_type]\n",
+    "                new_original += original[span[0]:span[1]]\n",
+    "                new_original += edit_2_special_token_end[edit_type]\n",
+    "                if j < len(original_spans) - 1:\n",
+    "                    new_original += original[original_spans[j][1]:original_spans[j+1][0]]\n",
+    "            new_original += original[original_spans[-1][1]:]\n",
+    "        \n",
+    "        if simplified_spans is None:\n",
+    "            new_simplified = simplified\n",
+    "        else:\n",
+    "            simplified_spans.sort(key=lambda x: (x[0], x[1]))\n",
+    "            new_simplified = simplified[:simplified_spans[0][0]]\n",
+    "            for j, span in enumerate(simplified_spans):\n",
+    "                if simplified[span[0]:span[1]] == \"||\":\n",
+    "                    new_simplified += \"<split_sign>\"\n",
+    "                else:\n",
+    "                    new_simplified += edit_2_special_token_start[edit_type]\n",
+    "                    new_simplified += simplified[span[0]:span[1]]\n",
+    "                    new_simplified += edit_2_special_token_end[edit_type]\n",
+    "                if j < len(simplified_spans) - 1:\n",
+    "                    new_simplified += simplified[simplified_spans[j][1]:simplified_spans[j+1][0]]\n",
+    "            new_simplified += simplified[simplified_spans[-1][1]:]\n",
+    "        \n",
+    "        # replace \"|| \" in simplified with \"\"\n",
+    "        new_simplified = new_simplified.replace(\"|| \", \"\")\n",
+    "        new_simplified = new_simplified.replace(\"<split_sign> \", \"<split_sign>\")\n",
+    "        \n",
+    "        original_list.append(original)\n",
+    "        sentence1_list.append(new_original)\n",
+    "        sentence2_list.append(new_simplified)\n",
+    "        label_list.append(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataframe\n",
+    "df = pd.DataFrame({\"original\": original_list, \"sentence1\": sentence1_list, \"sentence2\": sentence2_list, \"label\": label_list})\n",
+    "\n",
+    "unique_sentence1 = df[\"original\"].unique().tolist()\n",
+    "# train, val, test split, 80%, 10%, 10%\n",
+    "train, val, test = np.split(unique_sentence1, [int(.8*len(unique_sentence1)), int(.9*len(unique_sentence1))])\n",
+    "\n",
+    "train_df = df[df[\"original\"].isin(train)]\n",
+    "val_df = df[df[\"original\"].isin(val)]\n",
+    "test_df = df[df[\"original\"].isin(test)]\n",
+    "# save to csv\n",
+    "train_df.to_csv(\"gpt3_data/train.csv\", index=False)\n",
+    "val_df.to_csv(\"gpt3_data/val.csv\", index=False)\n",
+    "test_df.to_csv(\"gpt3_data/test.csv\", index=False)"
    ]
   },
   {
