--- a/data/yao/prepare_new_wiki.ipynb
+++ b/data/yao/prepare_new_wiki.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "\n",
     "# df = pd.read_csv('../gpt-3/text-simplification-new-wikipedia.csv')\n",
-    "df = pd.read_csv('text-simplification-new-wikipedia-2.csv')"
+    "df = pd.read_csv('text-simplification-new-wikipedia-3.csv')"
    ]
   },
   {
@@ -18,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_sentences = df['Original Sentence'].tolist()"
+    "original_sentences = df['Original Sentence'].tolist()\n",
+    "# strip\n",
+    "original_sentences = [s.strip() for s in original_sentences]"
    ]
   },
   {
@@ -30,7 +32,7 @@
     "# prepare data for muss model\n",
     "\n",
     "# write original sentences into txt file line by line\n",
-    "with open('new_wiki_original_sentences_2.txt', 'w') as f:\n",
+    "with open('new_wiki_original_sentences_3.txt', 'w') as f:\n",
     "    f.write('\\n'.join(original_sentences))\n"
    ]
   },
